--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,23 @@ libnotmuch*.dylib
 *~
 .*.swp
 releases
+
+# automake
+
+Makefile.in
+
+# autoconf
+
+/autom4te.cache
+/autoscan.log
+/autoscan-*.log
+/aclocal.m4
+/compile
+/config.h.in
+/configure
+/configure.scan
+/depcomp
+/install-sh
+/missing
+/stamp-h1
+
